--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -114,6 +114,10 @@ small {
 a {
 	color: var(--secondary-turquoise);
 	text-decoration: underline;
+	transition: filter 0.2s ease-in-out;
+}
+a:hover {
+	filter: brightness(85%);
 }
 
 ul {
@@ -137,7 +141,7 @@ ul {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: var(--x-large);
+	padding: 128px var(--x-large);
 }
 
 #about-me {
