--- a/css/projects-section.css
+++ b/css/projects-section.css
@@ -27,15 +27,17 @@
 }
 
 .project-cover-img {
-	display: inline-flex;
 	max-height: 100%;
 	max-width: 100%;
 	transition: transform 0.3s ease-in-out;
+	/* filter: drop-shadow(0 8px 16px 'var(--primary--navy)0d'); */
 	/* box-shadow: 0px 8px 32px -4px rgba(38, 43, 98, 0.1); */
 }
-
+.project-cover:hover {
+	filter: brightness(100%);
+}
 .project-cover:hover .project-cover-img {
-	transform: scale(1.1);
+	transform: scale(1.05);
 }
 
 .project-cover h3 {
